--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "react-tooltip": "^5.28.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
